--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-server": "~17.3.0",
     "@angular/router": "~17.3.0",
     "@angular/ssr": "~17.3.0",
+    "@ngneat/transloco": "^6.0.4",
     "@nx/angular": "19.0.5",
     "express": "~4.18.2",
     "rxjs": "~7.8.0",
@@ -35,6 +36,8 @@
     "@nx/eslint-plugin": "19.0.5",
     "@nx/jest": "19.0.5",
     "@nx/js": "19.0.5",
+    "@nx/web": "19.0.5",
+    "@nx/webpack": "19.0.5",
     "@nx/workspace": "19.0.5",
     "@schematics/angular": "~17.3.0",
     "@swc-node/register": "~1.8.0",
