--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@ng-mf/data-access-user": ["libs/shared/data-access-user/src/index.ts"],
+      "@ng-mf/lib-with-transloco": ["libs/lib-with-transloco/src/index.ts"],
+      "login/Routes": ["apps/login/src/app/remote-entry/entry.routes.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
